[gd_scene load_steps=4 format=3 uid="uid://dy08kb8arjjdn"]

[ext_resource type="Texture2D" uid="uid://bdhinh23wemjn" path="res://scene/guns/grinder_star/Grinder_star_001.png" id="1_64i11"]
[ext_resource type="Script" uid="uid://buucqpwyhqqyc" path="res://scene/guns/grinder_star/grinder_star.gd" id="1_am4hd"]

[sub_resource type="CircleShape2D" id="CircleShape2D_am4hd"]
radius = 25.0

[node name="Grinder_Star" type="Node2D"]
script = ExtResource("1_am4hd")

[node name="HitBox_grinder_star" type="Area2D" parent="."]
scale = Vector2(0.4, 0.4)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox_grinder_star"]
shape = SubResource("CircleShape2D_am4hd")

[node name="Sprite2D" type="Sprite2D" parent="HitBox_grinder_star"]
texture = ExtResource("1_64i11")

[node name="Timer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true
autostart = true

[connection signal="area_entered" from="HitBox_grinder_star" to="." method="_on_hit_box_grinder_star_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
